--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body {
   
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Spicy+Rice&display=swap');
+
+
+
+  
 
 /* --------------- Navigation --------- Menu ----------*/
 
@@ -32,14 +37,49 @@ a {
   text-decoration: none;
 }
 
-
-
-.nav-flex li{
-  display: flex;
-  justify-content: space-around;
-  width: 100vw;
-  gap: 2%;
+img .bouton{
+  position: sticky;
   
+
+  
+  
+ 
+}
+.nav-flex{
+  text-align: end;
+  font-size: 10%;
+  margin-right: 0;
+  margin-left: 30%;
+  padding-top: 6%;
+  
+}
+.bouton1{
+  width: 30%;
+  position: sticky;
+  
+  
+  
+}
+.bouton2{
+  width: 30%;
+  position: sticky;
+  
+}
+.bouton3{
+  width: 30%;
+  position: sticky;
+}
+.bouton4{
+  width: 30%;
+  position: sticky;
+}
+.bouton5{
+  width: 30%;
+  position: sticky;
+}
+.bouton6{
+  width: 30%;
+  position: sticky;
 }
 
 /*-----logo--Image--Affiche-----------------*/
@@ -49,6 +89,7 @@ a {
   justify-content: center;
   align-items: center;
   object-fit: contain;
+  vertical-align: -3.5vw;
   
 }
 
@@ -72,41 +113,23 @@ height : auto;
   justify-content: center;
    align-items: center;
    
+   
 }
 .ico-categorie
-{width: 50px;
+{width: 10%;
+  padding-right: 2%;
+  text-align: center;
 }
 .ico-categorie2
-{width: 80px;
+{width: 12%;
+  padding-right: 2%;
+  text-align: center;
 }
 
 
-img .bouton1
-{
-  width: 2vw;
-  
-}
-img .bouton2
-{
-  width: 10%;
-}
-img .bouton3
-{
-  width: 10%;
-}
-img .bouton4
-{
-  width: 10%;
-}
-img .bouton5
-{
-  width: 10%;
-}
-img .bouton6
-{
-  width: 10%;
-}
-/* ---------passage zoom images------------*/
+
+
+
 
 
 
@@ -117,7 +140,8 @@ img .bouton6
          background-attachment: fixed;
          background-size: 100% 100%;
         
-         height: 100vw;
+         height: 100%;
+         padding-bottom: 1%;
         
          
 }
@@ -125,27 +149,34 @@ img .bouton6
 #titre{
   background-color: #96FF66;
  width: 100vw;
-height: 20vw;
+ height: auto;
   
     color: #333;
     
-    padding: 20px;
+    padding: 12px;
     text-align: center;
-    padding-bottom: 25vw;
+    padding-bottom: 5em;
+    justify-content: center;
   
   
 }
 #titre h2{
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 35px;
+  font-family:'Spicy Rice', cursive;
+  font-size: 1.5em;
+  
 }
-h1{
-  font-size: 54px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  color: rgb(11, 167, 214);
-  text-shadow: 2px 2px #333;
-  text-align: center;
-}
+#titre h1{
+ 
+    font-family: 'Spicy Rice', cursive;
+    text-align: center;
+    font-size: 4em;
+    color: #58A0FF;
+    text-shadow: #000000 1px 1px, #000000 -1px 1px, #000000 -1px -1px, #000000 1px -1px;
+    
+   
+    
+  }
+
 /* Les liens */
 
 #item-10 {
@@ -162,6 +193,7 @@ h1{
   align-items: center;
   justify-content: center;
   text-align: center;
+  
 
 }
 #item-10 li:hover{
@@ -169,30 +201,39 @@ h1{
   color: goldenrod;
 }
 #item-10 ul li a{
-  font-size: 20px;
+  font-size: 1.2em;
   justify-content: center;
   text-align: center;
+  
 }
 #item-10 ul li{
   justify-content: start;
 }
-
+#item-10 ul li a img{
+  vertical-align: -10px;
+  
+}
 
 /* ------------------------------------------------------contenu secondaire--------------------------*/
 .angry-grid {
-  background-color: #58A0FF;
+ 
+  background-color: #00b4ff;
+  
   display: flexbox; 
   width: 100vw;
   padding-top: 2vw;
   
+  
+  
 }
+
 
 /* ---Txt A propos de l'association / qui sommes-nous ? + 
 add Txt projets realises-------*/
 
 #item-3 {
 align-content: center;
-font-size: 20px;
+font-size: 1.1em;
 width: 100vw;
 justify-content: center;
 
@@ -200,30 +241,50 @@ justify-content: center;
 
 .about{
  background-color: #FFC966;
- display: flex;
- flex-direction: column;
+
+ 
  justify-content: center;
- padding: 6vw;
- margin: 10vw;
-}
+ 
+ margin: 20vw;
+ 
+
+ font-family: 'Spicy Rice', cursive;
+ position: relative;
+    border: 2px solid #333;
+    padding: 3%;
+ border-bottom-right-radius: 10%;   
+border-top-left-radius: 10%;  
+    }
+   
+ 
+
 
 .project{
  background-color: #FF6672;
-display: flex;
-flex-direction: column;
+
+
+
 justify-content: center;
-padding: 6vw;
-margin: 10vw;
+
+margin: 20vw;
+ 
+font-family: 'Spicy Rice', cursive;
+ position: relative;
+    border: 2px solid #333;
+    padding: 3%;
+ border-bottom-right-radius: 10%;   
+border-top-left-radius: 10%; 
 }
 
 #item-3 h2{
 text-align: center;
-font-size: 44px;
+font-size: 2.1em;
+font-family: 'Spicy Rice', cursive;
 }
 
 #item-3 p{
  text-align: justify;
- font-size: 34px;
+ font-size: 1.6em;
  vertical-align: auto;
  margin-left: auto;
  margin-right: auto;
@@ -246,49 +307,60 @@ font-size: 44px;
  vertical-align: auto;
  margin-left: auto;
    margin-right: auto;
-   width: 75%;
+   width: 80%;
  }
 }
 
 /*------------- Galerie affiches-----------------*/
 #item-4 {
-background-color: #FF6672; 
-width: 35vw;
-margin-left: 25vw;
-margin-right: 25vw;
-
-justify-content: center;
+background: linear-gradient(105deg, orange 50%, cyan);; 
+width: 40%;
+max-height: 50vw;
+margin-left: 30%;
+margin-right: 30%;
 text-align: center;
-padding: 3vw;
+padding-left: 5%;
+padding-right: 5%;
+padding-bottom: 3%;
+margin-bottom: 20vw;
+position: relative;
+border:solid 5px hsla(0, 95%, 35%, 1);
+   
+border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+overflow-y: scroll;
 }
 
+.aff{
+  width: 100%;
+
+}
 .aff-1{
 
 width: 100%;
-padding: 5px;
-text-align: center;
+
 
 }
 
 .aff-1 h2{
   text-align: center;
-font-size: 44px;
+font-size: 2.1em;
 padding-bottom: 2vw;
+font-family: 'Spicy Rice', cursive;
  }
 
 .aff-2{
 
 width: 100%;
-padding: 5px;
-text-align: center;
+
 
 }
 
 .aff-2 h2{
   text-align: center;
-font-size: 44px;
+font-size: 2.1em;
 padding-bottom: 2vw;
 padding-top: 2vw;
+font-family: 'Spicy Rice', cursive;
 }
 
 .manif{
@@ -299,7 +371,7 @@ padding-top: 2vw;
 
    
 }
-
+/* -----------------------------------passage zoom images---------------------------------------------------------*/
 .aff-1 img{
  /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
 
@@ -331,41 +403,36 @@ padding-top: 2vw;
 
 /* -------------------Galerie photos manifestations passées-------------------------------------*/
 #item-2 {
+  background: linear-gradient(135deg, #CD65FF 50%, cyan);
+  max-height: 50vw;
+  overflow-y: scroll;
 
-  background-color: #CD65FF; 
-
-
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  margin-left: 25vw;
-  margin-right: 25vw;
-  width: 35vw;
+  width: 40%;
+  margin-left: 30%;
+  margin-right: 30%;
   text-align: center;
-  margin-top: 10vw;
-  padding-bottom: 2vw;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 3%;
+  position: relative;
+border:solid 5px hsla(0, 95%, 35%, 1);
+    
+    border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
  
 }
 .img-about{
  box-sizing: border-box;
 width: 100%;
 
-padding: 5px;
- align-items: center;
-
-  
-  
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
   
 }
+
 #item-2 h2{
   text-align: center;
-  font-size: 44px;
+  font-size: 2.1em;
   padding-bottom: 2vw;
   padding-top: 2vw;
+  font-family: 'Spicy Rice', cursive;
 }
 
 
@@ -373,6 +440,7 @@ padding: 5px;
  /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
 
 -moz-animation: all 1s ease; /* Firefox */
+
 
 }
 .image-about img:hover {
@@ -397,15 +465,17 @@ padding: 5px;
   margin-left: 30vw;
   margin-right: 30vw;
 
-  margin-top: 3vw;
+  margin-top: 10vw;
+  border-top-right-radius: 80px 80px;
   
 }
  
 #item-8 h2{
   text-align: center;
-font-size: 44px;
+font-size: 2.1em;
 
 padding-top: 2vw;
+font-family: 'Spicy Rice', cursive;
 }
 
 #contactForm{
@@ -420,13 +490,13 @@ form {
   margin: 2vw auto;
   width: 30vw;
   padding-top: 20px;
-  
+  font-size: 1.1em;
   
 }
 
-label {
+#contactForm label {
   line-height: 2;
-  
+  font-size: 1.2em;
   
 }
 
@@ -436,38 +506,72 @@ textarea {
   width: 100%;
   padding: 5px;
   margin-bottom: 10px;
+  font-size: 1.1em;
 }
 
 input[type="submit"] {
   background: #283b63;
   color: white;
-  border: none;
+  border-radius: 1em;
+
   padding: 5px 10px;
+  
+
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #333;
+  padding: .25em;
+
+  /* border-width defines the width the blue gradient background (3) */
+  border: .25em solid transparent;
+
+  background: 
+    /* (1) most inner gradient */
+    linear-gradient(to bottom, #fff, #bbb) content-box,
+    /* (2) red gradient */
+    linear-gradient(to right, #e94332, #a91302) padding-box,
+    /* (3) blue gradient */
+    linear-gradient(to right, #0867a6, #4aa9e8) border-box;
 }
+
+
 
  /*---------------  Documents d'inscriptions--------------------*/
  #item-9 {
 
   background-color: #96FF66; 
  
-  justify-content: center;
- width: 40vw;
+  
+ 
   display: flex;
   flex-direction: column;
-  margin-left: 25vw;
-  margin-right: 25vw;
+  
   margin-top: 10vw;
   padding-bottom: 2vw;
-  
+  width: 40%;
+  margin-left: 30%;
+  margin-right: 30%;
+  text-align: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  position: relative;
+    border: 2px solid #333;
+    padding: 3%;
+ border-bottom-right-radius: 4% 4%;  
+ border-bottom-left-radius: 4% 4%; 
+border-top-left-radius: 4% 4%;
+border-top-right-radius: 4% 4%;
+
+    
 }
 #item-9 h2{
   text-align: center;
-  font-size: 44px;
+  font-size: 2.1em;
   padding-bottom: 2vw;
   padding-top: 1vw;
 } 
 .telecharge li a{
-  font-size: 20px;
+  font-size: 1.6em;
   color: black;
   
 }
@@ -475,7 +579,7 @@ input[type="submit"] {
   color: goldenrod;
 }
 .envoi-docs li a{
-  font-size: 20px;
+  font-size: 1.6em;
   color: black;
 
 } 
@@ -485,7 +589,17 @@ input[type="submit"] {
 }
  
 
-
+#scroll_to_top {
+  position: fixed;
+  width: 50px;
+  height: auto;
+  bottom: 50px;
+  margin-right: 3%;
+}
+#scroll_to_top img {
+  width: 100px;
+  
+}
 
 
 /* Responsive */
@@ -512,4 +626,341 @@ input[type="submit"] {
   }
 }
 
+#background-wrap {
+    bottom: 0;
+	left: 0;
+	position: fixed;
+	right: 0;
+	top: 0;
+	z-index: -1;
+}
+/*------------------------------------------------animations--bulles--------------------------------*/
+/* KEYFRAMES */
 
+@-webkit-keyframes animateBubble {
+  0% {
+      margin-top: 1000px;
+  }
+  100% {
+      margin-top: -100%;
+  }
+}
+
+@-moz-keyframes animateBubble {
+  0% {
+      margin-top: 1000px;
+  }
+  100% {
+      margin-top: -100%;
+  }
+}
+
+@keyframes animateBubble {
+  0% {
+      margin-top: 1000px;
+  }
+  100% {
+      margin-top: -100%;
+  }
+}
+
+@-webkit-keyframes sideWays { 
+  0% { 
+      margin-left:0px;
+  }
+  100% { 
+      margin-left:50px;
+  }
+}
+
+@-moz-keyframes sideWays { 
+  0% { 
+      margin-left:0px;
+  }
+  100% { 
+      margin-left:50px;
+  }
+}
+
+@keyframes sideWays { 
+  0% { 
+      margin-left:0px;
+  }
+  100% { 
+      margin-left:50px;
+  }
+}
+
+/* ANIMATIONS */
+
+.x1 {
+  -webkit-animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: -5%;
+top: 5%;
+
+-webkit-transform: scale(0.6);
+-moz-transform: scale(0.6);
+transform: scale(0.6);
+}
+
+.x2 {
+  -webkit-animation: animateBubble 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
+-moz-animation: animateBubble 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
+animation: animateBubble 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
+
+left: 5%;
+top: 80%;
+
+-webkit-transform: scale(0.4);
+-moz-transform: scale(0.4);
+transform: scale(0.4);
+}
+
+.x3 {
+  -webkit-animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 10%;
+top: 40%;
+
+-webkit-transform: scale(0.7);
+-moz-transform: scale(0.7);
+transform: scale(0.7);
+}
+
+.x4 {
+  -webkit-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+-moz-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+
+left: 20%;
+top: 0;
+
+-webkit-transform: scale(0.3);
+-moz-transform: scale(0.3);
+transform: scale(0.3);
+}
+
+.x5 {
+  -webkit-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+-moz-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+
+left: 30%;
+top: 50%;
+
+-webkit-transform: scale(0.5);
+-moz-transform: scale(0.5);
+transform: scale(0.5);
+}
+
+.x6 {
+  -webkit-animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 50%;
+top: 0;
+
+-webkit-transform: scale(0.8);
+-moz-transform: scale(0.8);
+transform: scale(0.8);
+}
+
+.x7 {
+  -webkit-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 65%;
+top: 70%;
+
+-webkit-transform: scale(0.4);
+-moz-transform: scale(0.4);
+transform: scale(0.4);
+}
+
+.x8 {
+  -webkit-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+-moz-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+
+left: 80%;
+top: 10%;
+
+-webkit-transform: scale(0.3);
+-moz-transform: scale(0.3);
+transform: scale(0.3);
+}
+
+.x9 {
+  -webkit-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+-moz-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+
+left: 90%;
+top: 50%;
+
+-webkit-transform: scale(0.6);
+-moz-transform: scale(0.6);
+transform: scale(0.6);
+}
+
+.x10 {
+  -webkit-animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+-moz-animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+
+left: 80%;
+top: 80%;
+
+-webkit-transform: scale(0.3);
+-moz-transform: scale(0.3);
+transform: scale(0.3);
+}
+
+/* OBJECTS */
+
+.bubble {
+  -webkit-border-radius: 50%;
+-moz-border-radius: 50%;
+border-radius: 50%;
+
+  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+-moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+
+  height: 200px;
+position: absolute;
+width: 200px;
+}
+
+.bubble:after {
+  background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 70%); /* FF3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.5)), color-stop(70%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+  background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 70%); /* Chrome10+,Safari5.1+ */
+  background: -o-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 70%); /* Opera 12+ */
+  background: -ms-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 70%); /* IE10+ */
+  background: radial-gradient(ellipse at center,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 70%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+-webkit-border-radius: 50%;
+-moz-border-radius: 50%;
+border-radius: 50%;
+
+  -webkit-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
+-moz-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
+box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
+
+content: "";
+  height: 180px;
+left: 10px;
+position: absolute;
+width: 180px;
+}
+
+
+/* --------------------------------------------animations-ballons-----------------------------------------------*/
+.ballon_container {
+  display: flex;
+}
+.ballon {
+  width: 150px;
+  height: 165px;
+  padding: 40px;
+  display: inline-flex;
+  justify-content: space-around;
+  margin: auto;
+  border-radius: 80%;
+  position: relative;
+  box-shadow: inset 6px 5px 35px -8px #333222;
+  position: absolute;
+  top: 25%;
+  animation: moveBallon 6s infinite alternate;
+}
+@keyframes moveBallon {
+  0% {
+    transform: translateY(10px) rotate(0deg);
+  }
+  25% {
+    transform: translateY(11px) rotate(7deg);
+  }
+  50% {
+    transform: translateY(-20px) rotate(-4deg);
+  }
+  100% {
+    transform: translateY(-50px) rotate(8deg);
+  }
+}
+#balloon1 {
+  background-color: rgba(30, 203, 225, 0.8);
+  left: 4%;
+  animation-delay: 5s;
+}
+#balloon2 {
+  background-color: rgba(150, 30, 225, 0.8);
+  left: 13%;
+  animation-delay: 4s;
+  top: 10%;
+}
+#balloon3 {
+  background-color: rgba(225, 52, 30, 0.8);
+  left: 18%;
+  animation-delay: 6s;
+}
+#balloon4 {
+  background-color: rgba(106, 225, 30, 0.8);
+  left: 28%;
+  animation-delay: 4s;
+}
+#balloon1::after {
+  border-color: transparent transparent rgba(30, 203, 225, 1) transparent;
+}
+#balloon1 .thread {
+    background-color: rgba(150, 30, 225, 1);
+  }
+#balloon2::after {
+  border-color: transparent transparent rgba(150, 30, 225, 1) transparent;
+}
+#balloon2 .thread {
+    background-color: rgba(30, 203, 225, 1);
+  }
+#balloon3::after {
+  border-color: transparent transparent rgba(225, 52, 30, 1) transparent;
+}
+#balloon3 .thread {
+    background-color: rgba(106, 225, 30, 1);
+  }
+#balloon4::after {
+  border-color: transparent transparent rgba(106, 225, 30, 1) transparent;
+}
+#balloon4 .thread {
+    background-color: rgba(225, 52, 30, 1);
+  }
+.ballon::after {
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  bottom: -6px;
+  border-width: 0px 8px 8px 8px;
+  border-style: none solid solid solid;
+  border-color: transparent transparent red transparent;
+  /* transform: rotate(180deg); */
+  z-index: -1;
+  left: 44%;
+}
+.thread {
+  height: 90px;
+  width: 1px;
+  position: absolute;
+  border: 1px solid transparent;
+  bottom: -95px;
+  background-color: red;
+  /* border-style: dotted; */
+  z-index: -1;
+}
