--- a/style.css
+++ b/style.css
@@ -46,15 +46,15 @@ img .bouton{
  
 }
 .nav-flex{
-  text-align: end;
+  text-align: start;
   
-  margin-right: 2vw;
-  margin-left: 30vw;
-  padding-top: 7vw;
+  margin-right: 1vw;
+  margin-left: 42vw;
+  padding-top: 10vw;
   
 }
 .bouton1{
-  width: 22%;
+  width: 24%;
   position: sticky;
   
   
@@ -62,7 +62,7 @@ img .bouton{
   
 }
 .bouton2{
-  width: 22%;
+  width: 24%;
   position: sticky;
   margin-left: 5vw;
   margin-right: 5vw;
@@ -70,34 +70,35 @@ img .bouton{
   
 }
 .bouton3{
-  width: 22%;
+  width: 24%;
   position: sticky;
   margin-top: 3vw;
   
 }
 .bouton4{
-  width: 22%;
+  width: 24%;
   position: sticky;
   margin-left: 2vw;
 }
 .bouton5{
-  width: 22%;
+  width: 24%;
   position: sticky;
   margin-right: 5vw;
   margin-left: 5vw;
 }
 .bouton6{
-  width: 22%;
+  width: 24%;
   position: sticky;
   margin-right: 0vw;
-  margin-top: 5vw;
+  margin-top: 4vw;
 }
 .bouton6{
-  width: 22%;
+  width: 24%;
   position: sticky;
+  margin-top: 5vw;
 }
 .bouton7{
-  width: 22%;
+  width: 24%;
   position: relative;
   margin-top: 5vw;
   
@@ -149,12 +150,6 @@ height : auto;
   text-align: center;
   vertical-align: -1vw;
 }
-
-
-
-
-
-
 
 
 /*--------------------------------------main----------------------------------------------*/
@@ -417,14 +412,15 @@ text-decoration: red wavy underline;
  /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
 
 -moz-transition: all 1s ease; /* Firefox */
+-webkit-transition: all 1s ease; /*Chrome*/
 
 }
 
 .aff-1 img:hover {
 /* L'image est grossie de 25% */
 
--moz-transform:scale(1.25); /* Firefox */
-
+-moz-transform: scale(1.25); /* Firefox */
+-webkit-transform: scale(1.25);/*Chrome*/
 }
 
 
@@ -432,14 +428,14 @@ text-decoration: red wavy underline;
  /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
 
 -moz-transition: all 1s ease; /* Firefox */
-
+-webkit-transition: all 1s ease;/*Chrome*/
 }
 
 .aff-2 img:hover {
 /* L'image est grossie de 25% */
 
--moz-transform:scale(1.25); /* Firefox */
-
+-moz-transform: scale(1.25); /* Firefox */
+-webkit-transform: scale(1.25);/*Chrome*/
 }
 
 /* -------------------Galerie photos manifestations passées-------------------------------------*/
@@ -487,14 +483,14 @@ width: 100%;
  /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
 
 -moz-animation: all 1s ease; /* Firefox */
-
+-webkit-transition: all 1s ease;/*Chrome*/
 
 }
 .image-about img:hover {
 /* L'image est grossie de 50% */
 
 -moz-transform:scale(1.50); /* Firefox */
-
+-webkit-transform: scale(1.50);/*Chrome*/
 }
 
 /* ----------------------------contactez-nous--------------------  */
@@ -643,6 +639,7 @@ border-top-right-radius: 4% 4%;
 
 #scroll_to_top {
   position: fixed;
+  
   width: 5vw;
   height: auto;
   bottom: 4vw;
@@ -655,15 +652,53 @@ border-top-right-radius: 4% 4%;
 
 
 /* Responsive */
-/*
-@media screen and (max-width: 900px) {
-  h1 {
-    font-size: 2rem;
-    position: relative;
-    top: 85%;
-    left: 50%;
-  }
+
+@media screen and (max-width: 700px) {
+  #page{
+  background-image:url('images/images/image-site.png');
+         background-repeat: no-repeat;
+         background-attachment: fixed;
+         background-size: 100vw 100vw;
+        
+         height: 100% 100%;}
+  #titre{
+          background-color: #96FF66;
+         width: 100vw;
+         height: auto;
+          
+            color: #333;
+            
+            padding: 0vw;
+            text-align: center;
+            padding-bottom: 0;
+            justify-content: center;
+          
+          
+        }
+
+        #titre h2{
+          font-family:'Spicy Rice', cursive;
+          font-size: 0.5vw;
+          
+        }
+        #titre h1{
+         
+            font-family: 'Spicy Rice', cursive;
+            text-align: center;
+            font-size: 1.5vw;
+            color: #58A0FF;
+            text-shadow: #000000 1px 1px, #000000 -1px 1px, #000000 -1px -1px, #000000 1px -1px;
+            
+           
+            
+          }
+          #titre h2 img{
+            vertical-align: -10vw;
+          }
+  
+
 }
+
 
 
 
